# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: diff-check.yml
gendiff/: __init__.py  cli.py  create_tree.py  generate_difference.py  generating_difference.py  genereting_difference.py  get_extension.py  parser.py  styles.py
gendiff/scripts/: gendiff.py
gendiff/styles/: __init__.py  constants.py  get_style.py  json_style.py  plain.py  plain_style.py  stylish.py
tests/: test_diff.py  test_hexlet.py
tests/fixtures/: json_result  nested_json_result
